syntax = "proto3";
package syft.util;

message EnumType {
    string member_name = 1;
}